--- a/task1/index.html
+++ b/task1/index.html
@@ -6,10 +6,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Content Management</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 <body>
 
+    <div class="container">
+        <div class="heading">
+            <h1 class="text-center">Todo list</h1>
+        </div>
+        <div class="container main">
+            <h4>Add Todo</h4>
+            <form class="row g-3">
+                <div class="col-12">
+                  <!-- <label for="validationDefault01" class="form-label">First name</label> -->
+                  <input type="text" class="form-control" id="validationDefault01" value="Add new todo" required>
+                </div>
+                <div class="col-12">
+                  <button class="btn btn-primary" type="submit">Submit</button>
+                </div>
+              </form>
+        </div>
+        <div class="container result">
+            <ul class="container list-group">
+                <!-- <li class="list-group-item active" aria-current="true">An active item</li> -->
+                <!-- <li class="list-group-item">A second item  <i class="bi bi-check-lg"></i></li>
+                <li class="list-group-item">A third item</li><i class="bi bi-check-lg"></i>
+                <li class="list-group-item">A fourth item</li>
+                <li class="list-group-item">And a fifth one</li> -->
 
+                <li class="list-group-item row align-items-start" id="box">
+                    <input type="text" class="form-control col-md-4" id="validationDefault01" value="Add new todo" required>
+                    <i class="fa-solid fa-check col-md-4"></i><i class="fa-solid fa-xmark"></i>
+                </li>
+                <li class="list-group-item row align-items-start">
+                    <input type="text" class="form-control col-md-4" id="validationDefault01" value="Add new todo" required>
+                    <i class="fa-solid fa-check col-md-4"></i><i class="fa-solid fa-xmark"></i>
+                </li>
+                <li class="list-group-item row align-items-start">
+                    <input type="text" class="form-control col-md-4" id="validationDefault01" value="Add new todo" required>
+                    <i class="fa-solid fa-check col-md-4"></i><i class="fa-solid fa-xmark"></i>
+                </li>
+              </ul>
+        </div>
+    </div>
+    <script src="https://kit.fontawesome.com/d513c8d533.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
