--- a/task1/index.html
+++ b/task1/index.html
@@ -20,7 +20,7 @@
       <div class="container-fluid m-auto">
         <form class="row g-4 container-fluid mt-3">
           <div class="col-11 m-auto">
-            <label for="validationDefault01" class="form-label">First name</label>
+            <label for="validationDefault01" class="form-label font-weight-bold">Add Todo</label>
             <input
               type="text"
               class="form-control p-3 custom-input"
