appendChild(li) to listContainer

--- a/task1/index.html
+++ b/task1/index.html
@@ -24,11 +24,11 @@
             <input
               type="text"
               class="form-control p-3 custom-input"
-              id="validationDefault01"
-              value="Add new todo"
+              id="input-box"
+              placeholder="Add new todo"                                
               required
             />
-            <button class="btn btn-primary mt-4" type="submit">Submit</button>
+            <button class="btn btn-primary mt-4" id="submit-btn" type="submit">Submit</button>
           </div>
           <!-- <div class="col-12">
                   <button class="btn btn-primary" type="submit">Submit</button>
@@ -37,38 +37,38 @@
       </div>
 
       <div class="result-todo container-fluid m-auto">
-        <ul class="list-group container-fluid mt-5">
-            <li class="list-group-item container-fluid col-11 m-auto">
+        <ul class="list-group container-fluid mt-5" id="list-container">
+            <!-- <li class="list-group-item container-fluid col-11 m-auto">
                 <div class="input-group ">
                     <input type="text" class="form-control no-border input-txt" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
                     <span class="text no-border m-2 "> <i class="fa-solid fa-check green-txt"></i></span>
                     <span class="text no-border m-2 "><i class="fa-solid fa-xmark red-txt"></i></span>
                   </div>
-            </li>
+            </li> -->
             
-            <li class="list-group-item container-fluid col-11 m-auto">
+            <!-- <li class="list-group-item container-fluid col-11 m-auto">
                 <div class="input-group ">
-                    <input type="text" class="form-control no-border" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+                    <input type="text" class="form-control checked no-border" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
                     <span class="text no-border m-2 "> <i class="fa-solid fa-check green-txt"></i></span>
                     <span class="text no-border m-2 "><i class="fa-solid fa-xmark red-txt"></i></span>
                   </div>
-            </li>
+            </li> -->
 
-            <li class="list-group-item container-fluid col-11 m-auto">
+            <!-- <li class="list-group-item container-fluid col-11 m-auto">
                 <div class="input-group ">
                     <input type="text" class="form-control no-border" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
                     <span class="text no-border m-2 "> <i class="fa-solid fa-check green-txt"></i></span>
                     <span class="text no-border m-2 "><i class="fa-solid fa-xmark red-txt"></i></span>
                   </div>
-            </li>
+            </li> -->
 
-            <li class="list-group-item container-fluid col-11 m-auto">
+            <!-- <li class="list-group-item container-fluid col-11 m-auto">
                 <div class="input-group ">
                     <input type="text" class="form-control no-border" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
                     <span class="text no-border m-2 "> <i class="fa-solid fa-check green-txt"></i></span>
                     <span class="text no-border m-2 "><i class="fa-solid fa-xmark red-txt"></i></span>
                   </div>
-            </li>
+            </li> -->
           </ul>
       </div>
     </section>
