--- a/task1/index.html
+++ b/task1/index.html
@@ -20,7 +20,7 @@
 
       <nav class="navbar fixed-top mb-5 bg-color">
         <div class="container-fluid bg-color">
-          <a class="navbar-brand custom-color" href="#">Todo List</a>
+          <a class="navbar-brand custom-color mx-5" href="#">Todo List</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon custom-icon-color"></span>
           </button>
