--- a/task1/index.html
+++ b/task1/index.html
@@ -32,7 +32,7 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" id="darkmode" href="#">Dark theme  <span><i class="fas fa-moon" id="icon" style="color: #c7c7c7;"></i></span> </a>
+                  <a class="nav-link active" aria-current="page" id="darkmode" mode-data="darkmode" href="#">Dark theme  <span><i class="fas fa-moon" id="icon" style="color: #c7c7c7;"></i></span> </a>
                 </li>
               </ul>
             
