--- a/task1/index.html
+++ b/task1/index.html
@@ -8,7 +8,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="heading">Temperature Converter</div>
+        <div class="inputfield">
+            <div class="temperature-wrapper">
+                <label>celsius:</label>
+                <input type="number" name="celsius" id="celsiusbox"
+                    placeholder="enter temperature">
+            </div>
+            <div class="temperature-wrapper">
+                <label>fahrenheit:</label>
+                <input type="number" name="fahrenheit" id="fahrenheitbox"
+                    placeholder="enter temperature">
+            </div>
+            <div class="temperature-wrapper">
+                <label>kelvin:</label>
+                <input type="number" name="kelvin" id="kelvinbox"
+                    placeholder="enter temperature">
+            </div>
+        </div>
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
